@@ -27,7 +27,6 @@ public class ThirdsModule extends SimpleModule {
         addAbstractTypeMapping(ThirdStates.class,ThirdStatesData.class);
         addAbstractTypeMapping(Detail.class,DetailData.class);
         addAbstractTypeMapping(I18n.class,I18nData.class);
-        addAbstractTypeMapping(Action.class,ActionData.class);
         addAbstractTypeMapping(Response.class,ResponseData.class);
     }
 }
