@@ -20,6 +20,7 @@
 * [OC-864] As a user I want to be able to reset archives filters so I can change my search criteria => Add a space between the search button and the Minutes field
 * [OC-939] Synchronize timeline with feed (When a filter is set in the feed, it applies as well in the timeline (severity, tags or business period))
 * [OC-960] Back : remove old action service
+* [OC-962] Back: remove reference to action in third
 
 == Bugs
 * [OC-772] Bug on archives screen: clear results when exiting archive page.
